<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addUri_layoutContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:layout_margin="@dimen/_10sdp"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/addUri_imageAddUri"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="image"
        android:src="@drawable/ic_website"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/colorWhite" />

    <TextView
        android:id="@+id/addUri_addUri_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_link"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="@dimen/_12sdp"
        android:includeFontPadding="false"
        app:layout_constraintStart_toEndOf="@id/addUri_imageAddUri"
        app:layout_constraintBottom_toBottomOf="@id/addUri_imageAddUri"
        app:layout_constraintTop_toTopOf="@id/addUri_imageAddUri"
        />

    <EditText
        android:id="@+id/addUri_input_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        app:layout_constraintTop_toBottomOf="@+id/addUri_addUri_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="@string/type"
        android:gravity="center_vertical"
        android:padding="@dimen/_8ssp"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:background="@null"
        />

    <TextView
        android:id="@+id/addUri_add_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addDialog"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/ubuntu_medium"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addUri_input_et"
        android:layout_marginEnd="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        />

    <TextView
        android:id="@+id/addUri_cancel_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelDialog"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/ubuntu_medium"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toStartOf="@+id/addUri_add_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addUri_input_et"
        android:layout_marginEnd="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>