<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_deleteNoteContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:layout_margin="@dimen/_10sdp"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/deleteNote_imageAddUri"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="image"
        android:src="@drawable/ic_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/colorDelete" />

    <TextView
        android:id="@+id/deleteNote_delete_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="@dimen/_12sdp"
        android:includeFontPadding="false"
        app:layout_constraintStart_toEndOf="@id/deleteNote_imageAddUri"
        app:layout_constraintBottom_toBottomOf="@id/deleteNote_imageAddUri"
        app:layout_constraintTop_toTopOf="@id/deleteNote_imageAddUri"
        />

    <TextView
        android:id="@+id/deleteNote_done_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/colorDelete"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteNote_delete_tv"
        android:layout_marginEnd="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        />

    <TextView
        android:id="@+id/deleteNote_cancel_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelDialog"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/ubuntu_medium"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toStartOf="@+id/deleteNote_done_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteNote_delete_tv"
        android:layout_marginEnd="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>